Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61267

depend_command filters out files that don't exist yet

XMLWordPrintable

    • 80dea66424c4887f66f64ea1920ab460f27b78af

      qmake's depend_command feature runs a command that returns a list of files that are to be added to the list of dependencies. However, it seems filter out files that don't exist. This makes it useless for dependencies that are dynamically generated.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            buddenha Oswald Buddenhagen
            leontimmermans Leon Timmermans
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes